--- a/index.html
+++ b/index.html
@@ -76,6 +76,21 @@
         </div>
       </div>
     </section>
+    <h2 class="progress-title">Avancement du projet - A venir</h2>
+    <section class="progress-section">
+      <div class="progress-bar-container">
+        <div class="progress-bar-bg">
+          <div class="progress-bar-fill" style="width: 85%"></div>
+        </div>
+        <span class="progress-label">85% terminé</span>
+      </div>
+      <ul class="progress-todo">
+        <li>Ajout du paiement via Google Play</li>
+        <li>Modification de l'interface</li>
+        <li><span class="new">[Nouveau]</span> Import des contacts depuis le téléphone directement</li> 
+        <li><span class="new">[Nouveau]</span> Export des données mutli-critére via SmartVue</li>
+      </ul>
+    </section>
 
     <iframe data-tally-src="https://tally.so/embed/wdGxGy" loading="lazy" width="100%" height="540" frameborder="0" marginheight="0" marginwidth="0" title="Join the waitlist"></iframe>
 <script>var d=document,w="https://tally.so/widgets/embed.js",v=function(){"undefined"!=typeof Tally?Tally.loadEmbeds():d.querySelectorAll("iframe[data-tally-src]:not([src])").forEach((function(e){e.src=e.dataset.tallySrc}))};if("undefined"!=typeof Tally)v();else if(d.querySelector('script[src="'+w+'"]')==null){var s=d.createElement("script");s.src=w,s.onload=v,s.onerror=v,d.body.appendChild(s);}</script>
